# Ignite/Node/Aulas/02-rentx/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router } from 'express';
+import { usersRoutes } from './users.routes';
 import { categoriesRoutes } from './categories.routes';
 import { specificationsRoutes } from './specifications.routes';
 
 const router = Router();
 
-router.use(categoriesRoutes);
-router.use(specificationsRoutes);
+router.use('/categories', usersRoutes);
+router.use('/specifications', categoriesRoutes);
+router.use('/users', specificationsRoutes);
 
 export { router };
