# Ignite/Node/Aulas/02-rentx/src/routes/specifications.routes.ts
@@ -6,9 +6,6 @@ const specificationsRoutes = Router();
 
 const createSpecificationController = new CreateSpecificationController();
 
-specificationsRoutes.post(
-  '/specifications',
-  createSpecificationController.handle,
-);
+specificationsRoutes.post('/', createSpecificationController.handle);
 
 export { specificationsRoutes };
